--- a/Civilla-Project/Police-Control/pom.xml
+++ b/Civilla-Project/Police-Control/pom.xml
@@ -26,5 +26,12 @@
             <artifactId>telegrambots</artifactId>
             <version>4.9</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.3.0</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
