--- a/pipelines/builder/Dockerfile
+++ b/pipelines/builder/Dockerfile
@@ -1,5 +1,5 @@
 FROM maven:3.6.3-openjdk-16-slim
-COPY pom.xml /project/pom.xml
-RUN mvn compile -f /project/pom.xml
-RUN rm -rf /project/pom.xml
+# COPY pom.xml /project/pom.xml
+# RUN mvn compile -f /project/pom.xml
+# RUN rm -rf /project/pom.xml
 CMD mvn clean install -f /project
