--- a/dev_config.yaml
+++ b/dev_config.yaml
@@ -1,3 +1,5 @@
 runcmd:
- - sudo -u ubuntu bash -c "cd \$HOME && git clone https://github.com/FF220v/ITMO-Psychopass-Team.git --branch ak-dev-deploy"
- - sudo -u ubuntu bash -c "\$HOME/ITMO-Psychopass-Team/pipelines/dev/init.sh"
+ - sudo -u ubuntu bash -c "cd ~ && git clone https://github.com/FF220v/ITMO-Psychopass-Team.git --branch ak-dev-deploy"
+ - sudo -u ubuntu bash -c "sudo ~/ITMO-Psychopass-Team/pipelines/dev/packages_install.sh"
+ - sudo -u ubuntu bash -c "sudo ~/ITMO-Psychopass-Team/pipelines/dev/configure_perms.sh"
+ - sudo -u ubuntu bash -c "~/ITMO-Psychopass-Team/pipelines/dev/configure_k8s.sh"
