--- a/sources/Base/pom.xml
+++ b/sources/Base/pom.xml
@@ -4,24 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.civilla</groupId>
-    <artifactId>PoliceControlProxy</artifactId>
+    <artifactId>Base</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>org.civilla</groupId>
-            <artifactId>Base</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.telegram</groupId>
-            <artifactId>telegrambots</artifactId>
-            <version>4.9</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.13</version>
         </dependency>
     </dependencies>
     <build>
-        <finalName>project/PoliceControl</finalName>
+        <finalName>project/Base</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -57,7 +51,6 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>Main</mainClass>
                         </manifest>
                         <manifestEntries>
                             <Class-Path>.</Class-Path>
