--- a/sources/Base/pom.xml
+++ b/sources/Base/pom.xml
@@ -13,6 +13,11 @@
             <artifactId>slf4j-nop</artifactId>
             <version>1.7.13</version>
         </dependency>
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>project/Base</finalName>
