simple server + kube configs

--- a/sources/projects/PoliceControlProxy/pom.xml
+++ b/sources/projects/PoliceControlProxy/pom.xml
@@ -7,6 +7,9 @@
     <artifactId>PoliceControlProxy</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
+    <properties>
+        <java.version>15</java.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.civilla</groupId>
