--- a/kubernetes_templates/deployments/policecontrolproxy.yaml
+++ b/kubernetes_templates/deployments/policecontrolproxy.yaml
@@ -18,4 +18,18 @@ spec:
       containers:
       - name: civilla-policecontrolproxy
         image: {{ civilla_policecontrolproxy_image }}
+        volumeMounts:
+          - name: bot-credentials
+            mountPath: "/project/kubernetes"
+            readOnly: true
+          - name: services-urls
+            mountPath: "/project/kubernetes"
+      volumes:
+        - name: bot-credentials
+          secret:
+            secretName: bot-credentials
+        - name: services-urls
+          secret:
+            secretName: bot-credentials
+
 
