--- a/sources/Base/pom.xml
+++ b/sources/Base/pom.xml
@@ -7,6 +7,9 @@
     <artifactId>Base</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
+    <properties>
+        <java.version>15</java.version>
+    </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -19,6 +22,11 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
