--- a/kubernetes_templates/deployments/policecontrolserver.yaml
+++ b/kubernetes_templates/deployments/policecontrolserver.yaml
@@ -20,15 +20,12 @@ spec:
         image: {{ civilla_policecontrolserver_image }}
         volumeMounts:
           - name: bot-credentials
-            mountPath: "/project/kubernetes"
+            mountPath: "/project/kubernetes/bot_credentials.json"
             readOnly: true
           - name: services-urls
-            mountPath: "/project/kubernetes"
+            mountPath: "/project/kubernetes/services_urls.json"
       volumes:
         - name: bot-credentials
           secret:
             secretName: bot-credentials
         - name: services-urls
-          secret:
-            secretName: bot-credentials
-
