update secrets yaml

--- a/kubernetes_templates/secrets/bot-credentials.yaml
+++ b/kubernetes_templates/secrets/bot-credentials.yaml
@@ -5,8 +5,5 @@ metadata:
   name: bot-credentials
   namespace: {{ namespace }}
 data:
-  bot_credentials.json: |
-    {
-      "name": "{{ bot_name }}",
-      "token": "{{ bot_password }}"
-    }
+  name: {{ bot_name | base64encode }},
+  token: {{ bot_password | base64encode }}
