--- a/sources/projects/PoliceControlServer/pom.xml
+++ b/sources/projects/PoliceControlServer/pom.xml
@@ -44,7 +44,8 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
+                <finalName>project/PoliceControlServer</finalName>
+         	<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
