--- a/kubernetes_templates/secrets/bot-credentials.yaml
+++ b/kubernetes_templates/secrets/bot-credentials.yaml
@@ -4,6 +4,9 @@ type: Opaque
 metadata:
   name: bot-credentials
   namespace: {{ namespace }}
-data:
-  name: {{ bot_name | base64encode }},
-  token: {{ bot_password | base64encode }}
+stringData:
+  bot_credentials.json: |
+    {
+        "name": "{{ bot_name }}",
+        "token": "{{ bot_password }}"
+    }
