--- a/sources/projects/PoliceControlProxy/pom.xml
+++ b/sources/projects/PoliceControlProxy/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>project/PoliceControl</finalName>
+        <finalName>project/PoliceControlProxy</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
