--- a/kubernetes_templates/deployments/policecontrolserver.yaml
+++ b/kubernetes_templates/deployments/policecontrolserver.yaml
@@ -20,12 +20,14 @@ spec:
         image: {{ civilla_policecontrolserver_image }}
         volumeMounts:
           - name: bot-credentials
-            mountPath: "/project/kubernetes/bot_credentials.json"
+            mountPath: "/project/kubernetes/bot_credentials"
             readOnly: true
           - name: services-urls
-            mountPath: "/project/kubernetes/services_urls.json"
+            mountPath: "/project/kubernetes/services_urls"
       volumes:
         - name: bot-credentials
           secret:
             secretName: bot-credentials
         - name: services-urls
+          configMap:
+            name: services-urls
