--- a/kubernetes_templates/services/policecontrolserver-service.yaml
+++ b/kubernetes_templates/services/policecontrolserver-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: policecontrolserver-service
+  name: civilla-policecontrolserver-service
   namespace: {{ namespace }}
 spec:
   selector:
-    run: policecontrolserver
+    run: civilla-policecontrolserver
   type: ClusterIP
   ports:
     - protocol: TCP
