Better faster stronger, add analysis dummy and some redis yamls btw

--- a/kubernetes_templates/configmaps/services-urls.yaml
+++ b/kubernetes_templates/configmaps/services-urls.yaml
@@ -6,5 +6,7 @@ metadata:
 data:
   services_urls.json: |
     {
-        "policecontrolserver": "civilla-policecontrolserver-service.{{ namespace }}"
+        "policecontrolserver": "civilla-policecontrolserver-service.{{ namespace }}",
+        "redissessionsstorage": "civilla-redissessionsstorage-service.{{ namespace }}",
+        "analysisserver": "civilla-analysisserver-service.{{ namespace }}"
     }
