--- a/kubernetes_templates/persistentvolumes/mongodb-pvc.yaml
+++ b/kubernetes_templates/persistentvolumes/mongodb-pvc.yaml
@@ -1,28 +1,28 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: redisdatabase-volume
+  name: mongodb-volume
   namespace: {{ namespace }}
   labels:
     type: local
 spec:
   storageClassName: manual
   capacity:
-    storage: 1Gi
+    storage: 5Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/redis"
+    path: "/mnt/mongodb"
 
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: redisdatabase-pvc
+  name: mongodb-pvc
 spec:
   storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 5Gi
