--- a/kubernetes_templates/persistentvolumes/mongodb-pvc.yaml
+++ b/kubernetes_templates/persistentvolumes/mongodb-pvc.yaml
@@ -19,6 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongodb-pvc
+  namespace: {{ namespace }}
 spec:
   storageClassName: manual
   accessModes:
