add server configs to spring apps

--- a/sources/projects/PoliceControlServer/pom.xml
+++ b/sources/projects/PoliceControlServer/pom.xml
@@ -44,8 +44,13 @@
 		</dependency>
 	</dependencies>
 	<build>
-                <finalName>project/PoliceControlServer</finalName>
-         	<plugins>
+		<finalName>project/PoliceControlServer</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
