--- a/sources/projects/AnalysisServer/pom.xml
+++ b/sources/projects/AnalysisServer/pom.xml
@@ -37,15 +37,15 @@
 			<version>1.0</version>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.6</version>
-		</dependency>
 	</dependencies>
 	<build>
 		<finalName>project/AnalysisServer</finalName>
-         	<plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
