--- a/sources/projects/MongoDBProxy/pom.xml
+++ b/sources/projects/MongoDBProxy/pom.xml
@@ -37,6 +37,11 @@
 			<version>1.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-sync</artifactId>
+			<version>4.1.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>project/MongoDBProxy</finalName>
