fix, configure kubernetes

--- a/kubernetes_templates/deployments/mongodbproxy.yaml
+++ b/kubernetes_templates/deployments/mongodbproxy.yaml
@@ -2,22 +2,22 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: {{ namespace }}
-  name: civilla-mongodbproxy
+  name: civilla-mongodbproxyserver
   labels:
-    run: civilla-mongodbproxy
+    run: civilla-mongodbproxyserver
 spec:
   replicas: 1
   selector:
     matchLabels:
-      run: civilla-mongodbproxy
+      run: civilla-mongodbproxyserver
   template:
     metadata:
       labels:
-        run: civilla-mongodbproxy
+        run: civilla-mongodbproxyserver
     spec:
       containers:
-      - name: civilla-mongodbproxy
-        image: {{ civilla_mongodbproxy_image }}
+      - name: civilla-mongodbproxyserver
+        image: {{ civilla_mongodbproxyserver_image }}
         volumeMounts:
           - name: services-urls
             mountPath: "/project/mounted_volumes/services_urls"
