--- a/kubernetes_templates/services/mongodbproxyserver-service.yaml
+++ b/kubernetes_templates/services/mongodbproxyserver-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: civilla-mongodbproxy-service
+  name: civilla-mongodbproxyserver-service
   namespace: {{ namespace }}
 spec:
   selector:
-    run: civilla-mongodbproxy
+    run: civilla-mongodbproxyserver
   type: ClusterIP
   ports:
     - protocol: TCP
