add devices server

--- a/sources/projects/DevicesServer/pom.xml
+++ b/sources/projects/DevicesServer/pom.xml
@@ -84,7 +84,7 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>org.civilla.AnalysisServer.DevicesServer</mainClass>
+							<mainClass>org.civilla.DevicesServer.DevicesServer</mainClass>
 						</manifest>
 						<manifestEntries>
 							<Class-Path>.</Class-Path>
