--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,11 +1,14 @@
+aiohttp==3.7.3
 async-lru==1.0.2
+async-timeout==3.0.1
 atomicwrites==1.4.0
 attrs==20.3.0
 certifi==2020.12.5
-chardet==4.0.0
+chardet==3.0.4
 colorama==0.4.4
 idna==2.10
 iniconfig==1.1.1
+multidict==5.1.0
 packaging==20.8
 pluggy==0.13.1
 py==1.10.0
@@ -19,5 +22,7 @@ pytest-asyncio==0.14.0
 requests==2.25.1
 TgCrypto==1.2.2
 toml==0.10.2
+typing-extensions==3.7.4.3
 urllib3==1.26.2
 wincertstore==0.2
+yarl==1.6.3
